	  is a 4 or 5 character hexadecimal) to represent a Unicode code point
	  that is converted to the corresponding UTF-8 byte sequence on output.
	o Time/date input recognizes format %p to handle am/pm field
	o Support for multiple textbox styles
	o Built-in modified Bessel functions (besi0 besi1 besin)
	o Built-in order N Bessel functions of the 1st and 2nd kind (besjn besyn)

* Changes
	o Plot style "with parallelaxes" has revised syntax to match
	  histogram and spiderplot commands.  There is no longer a limit
	  on the number of axes in a plot, and iteration is possible:
	  E.g.: "plot for [column=1:N] DATA using column with parallelaxes"
	o pm3d filled area quadrangles are clipped smoothly to the current
	  zrange. This affects pm3d surfaces and the faces of 3D boxes,
	  polygons, etc.
	  Example: http://gnuplot.info/demo_5.4/pm3d_clip.html
	o Imaginary values returned by the "using" specifier of a 2D plot
	  are treated as undefined values (NaN).  This was already true for
	  function plots and for 3D data plots.
	o The "set fontpath" command is deprecated (only affects PostScript).


		 Notes for packagers and testers
		================================

Obsolete or deprecated components
---------------------------------

The "gnuplot mode" elisp and TeX files for use with emacs are now
maintained as a separate project: https://github.com/bruceravel/gnuplot-mode
so there is no longer a configuration option --with-lisp-files.

LaTeX-related terminal drivers latex, emtex, eepic, and tpic are no longer
built by default.  Their closest equivalent is the new pict2e terminal, but
LaTeX users who want support for the full range of gnuplot plot styles are
recommended to use the cairolatex or tikz terminals.

The Japanese man page is provided both in SJIS and UTF-8 encodings.
Installation into appropriate directories is left to packagers.

Configuration options for interactive use
-----------------------------------------
