@@ -323,6 +323,7 @@ C
 #b Time/date input recognizes format %p to handle am/pm field
 #b Built-in modified Bessel functions (besi0 besi1 besin)
 #b Built-in order N Bessel functions of the 1st and 2nd kind (besjn besyn)
+#b VP_fwhm(sigma,gamma) returns Voigt profile full width at half maximumn value
 #end
 
 4 Changes
@@ -1276,6 +1277,7 @@ C  need @ in table, so end and restart the table !
 ^<tr>    <td>faddeeva(z)</td>    <td>complex</td>    <td>rescaled complex error function <i>w</i>(<i>z</i>) = exp(-<i>z</i>²) × erfc(-i<i>z</i>)</td></tr>
 ^<tr>    <td>erfi(x)</td>    <td>real</td>    <td>imaginary error function erfi(<i>x</i>) = -i × erf(i<i>x</i>)</td></tr>
 ^<tr>    <td>VP(x,sigma,gamma)</td>    <td>real</td>    <td>Voigt profile</td></tr>
+^<tr>    <td>VP_fwhm(sigma,gamma)</td>    <td>real</td>    <td>Voigt profile full with at half max</td></tr>
 
 ^</tbody>
 ^</table>
@@ -1786,11 +1788,16 @@ C marker below is used to signal this to doc2html:
  Imaginary error function erfi(x) = -i * erf(ix)
 4 Voigt Profile
 ?expressions functions VP
+?expressions functions VP_fwhm
 ?VP
+?VP_fwhm
 %VP(x,sigma,gamma)@real@Voigt profile
+%VP_fwhm(sigma,gamma)@real@Voigt profile full width at half maximum
 #VP(x,$\sigma$,$\gamma$)&real& Voigt profile $ VP(x,\sigma,\gamma) = {\int^{\infty}_{-\infty}{G(x^\prime;\sigma) L(x-x^\prime;\gamma) dx^\prime }} $ \\
+#VP\_fwhm($\sigma$,$\gamma$)&real& Voigt profile full width at half maximum value\\
  `VP(x,sigma,gamma)` corresponds to the Voigt profile defined by convolution of
  a Gaussian G(x;sigma) with a Lorentzian L(x;gamma).
+ `VP_fwhm(sigma,gamma)` gives the full width at half maximum value of this function.
 
 #\hline \end{longtable}
 #%% begin dummy tabular because the @end processing wants to end one
