@@ -87,7 +87,7 @@ f_voigtp(union argument *arg)
     z = voigt(z, sigma, gamma);		/* libcerf double -> double function */
     push(Gcomplex(&a, z, 0.0));
 }
-/* The libcery routine re_w_of_z( double x, double y )
+/* The libcerf routine re_w_of_z( double x, double y )
  * is equivalent to the previously implemented gnuplot routine voigt(x,y).
  * Use it in preference to the previous one.
  */
@@ -102,7 +102,9 @@ f_voigt(union argument *arg)
     w = re_w_of_z(x, y);
     push(Gcomplex(&a, w, 0.0));
 }
-/* erfi(z) = -i * erf(iz) */
+
+/* erfi(z) = -i * erf(iz)
+ */
 void
 f_erfi(union argument *arg)
 {
@@ -112,4 +114,21 @@ f_erfi(union argument *arg)
     z = real(pop(&a));
     push(Gcomplex(&a, erfi(z), 0.0));
 }
+
+/* Full width at half maximum of the Voigt profile
+ * VP_fwhm( sigma, gamma )
+ */
+void
+f_VP_fwhm(union argument *arg)
+{
+    struct value a;
+    double sigma, gamma;
+    double fwhm;
+
+    gamma = real(pop(&a));
+    sigma = real(pop(&a));
+    fwhm = 2. * voigt_hwhm(sigma, gamma);
+    push(Gcomplex(&a, fwhm, 0.0));
+}
+
 #endif
